--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "build": "run-s build:*",
     "dev": "run-p dev:*",
     "typecheck": "tsc",
-    "build:remix": "cross-env NODE_ENV=production remix build",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "build:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --minify --bundle --format=esm --define:process.env.NODE_ENV='\"production\"'",
+    "build:remix": "cross-env NODE_ENV=production remix build",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "dev:remix": "cross-env NODE_ENV=development remix dev",
     "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch"
   },
@@ -15,23 +17,24 @@
     "@remix-run/react": "^1.12.0",
     "@remix-run/vercel": "^1.12.0",
     "@vercel/node": "^2.6.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "node-persist": "^3.1.0",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "node-persist": "^3.1.0",
-    "web-push": "^3.4.5",
-    "npm-run-all": "^4.1.5",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3"
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.12.0",
     "@remix-run/eslint-config": "^1.12.0",
     "@remix-run/serve": "^1.12.0",
+    "@types/node-persist": "^3.1.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
-    "typescript": "^4.8.4",
-    "@types/node-persist": "^3.1.2"
+    "tailwindcss": "^3.2.6",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14"
