--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "run-s build:*",
     "dev": "run-p dev:*",
     "typecheck": "tsc",
+    "format": "prettier --write .",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "build:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --minify --bundle --format=esm --define:process.env.NODE_ENV='\"production\"'",
     "build:remix": "cross-env NODE_ENV=production remix build",
@@ -33,6 +34,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.8.4"
   },
