--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "usehooks-ts": "^2.9.1",
     "web-push": "^3.4.5"
   },
   "devDependencies": {
