--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:remix": "cross-env NODE_ENV=production remix build",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch",
-    "dev:remix": "cross-env NODE_ENV=development remix dev"
+    "dev:remix": "cross-env NODE_ENV=development remix dev",
+    "lint": "eslint --fix ./**/*.tsx"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.11",
@@ -23,10 +24,12 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "node-persist": "^3.1.0",
+    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-utils": "^6.0.0",
     "usehooks-ts": "^2.9.1",
     "web-push": "^3.4.5"
   },
