--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@remix-run/dev": "^1.12.0",
     "@remix-run/eslint-config": "^1.12.0",
     "@remix-run/serve": "^1.12.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node-persist": "^3.1.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.6",
+    "tailwindcss-font-inter": "^1.0.0",
     "typescript": "^4.8.4"
   },
   "engines": {
