--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint --fix ./**/*.tsx"
   },
   "dependencies": {
+    "@agentofuser/remark-oembed": "^1.0.4",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.15",
     "@remix-run/node": "^1.12.0",
@@ -23,13 +24,22 @@
     "@vercel/node": "^2.6.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.17.12",
+    "mdx-bundler": "^9.2.1",
     "node-persist": "^3.1.0",
     "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-prism-plus": "^1.5.1",
+    "rehype-slug": "^5.1.0",
+    "remark-emoji": "^3.1.1",
+    "remark-gfm": "^3.0.1",
+    "remark-hint": "^1.0.10",
     "remix-utils": "^6.0.0",
+    "tailwindcss-font-inter": "^3.0.1",
     "usehooks-ts": "^2.9.1",
     "web-push": "^3.4.5"
   },
@@ -43,8 +53,8 @@
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
     "prettier": "^2.8.4",
+    "rehype-accessible-emojis": "^0.3.2",
     "tailwindcss": "^3.2.6",
-    "tailwindcss-font-inter": "^1.0.0",
     "typescript": "^4.8.4"
   },
   "engines": {
