--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lint": "eslint --fix ./**/*.tsx"
   },
   "dependencies": {
-    "@agentofuser/remark-oembed": "^1.0.4",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.15",
     "@remix-run/node": "^1.12.0",
@@ -25,6 +24,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.12",
+    "fs-extra": "^11.1.1",
     "mdx-bundler": "^9.2.1",
     "node-persist": "^3.1.0",
     "node-sass": "^8.0.0",
@@ -37,7 +37,6 @@
     "rehype-slug": "^5.1.0",
     "remark-emoji": "^3.1.1",
     "remark-gfm": "^3.0.1",
-    "remark-hint": "^1.0.10",
     "remix-utils": "^6.0.0",
     "tailwindcss-font-inter": "^3.0.1",
     "usehooks-ts": "^2.9.1",
@@ -48,6 +47,7 @@
     "@remix-run/eslint-config": "^1.12.0",
     "@remix-run/serve": "^1.12.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/fs-extra": "^11.0.1",
     "@types/node-persist": "^3.1.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
