--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch",
     "dev:remix": "cross-env NODE_ENV=development remix dev",
+    "generator": "node ./generate-metadata.js",
     "lint": "eslint --fix ./**/*.tsx"
   },
   "dependencies": {
