fix: Fixed wrong `env` key in action workflow

--- a/.github/workflows/generate-metadata.yml
+++ b/.github/workflows/generate-metadata.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Generate metadata 📜
       run: npm run generator
       env:
-        GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        GITHUB_KEY: ${{ secrets.GIT_TOKEN }}
       
