--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "remix-typedjson": "^0.1.7",
     "remix-utils": "^6.0.0",
     "tailwindcss-font-inter": "^3.0.1",
+    "tiny-invariant": "^1.3.1",
     "usehooks-ts": "^2.9.1",
     "web-push": "^3.4.5",
     "zod": "^3.21.4"
