chore: Updated action `env`

--- a/.github/workflows/generate-metadata.yml
+++ b/.github/workflows/generate-metadata.yml
@@ -26,4 +26,5 @@ jobs:
       run: npm run generator
       env:
         GITHUB_KEY: ${{ secrets.GIT_TOKEN }}
+        NODE_ENV: production
       
