--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "run-p dev:*",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "build:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --minify --bundle --format=esm --define:process.env.NODE_ENV='\"production\"'",
     "build:remix": "cross-env NODE_ENV=production remix build",
     "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch",
@@ -23,6 +22,7 @@
     "@remix-run/react": "^1.15.0",
     "@remix-run/vercel": "^1.15.0",
     "@vercel/node": "^2.13.0",
+    "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.12",
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.1",
+    "redent": "^4.0.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
