--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
     "@remix-run/vercel": "^1.15.0",
+    "@vercel/analytics": "^1.0.0",
     "@vercel/node": "^2.13.0",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
