--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.0.15",
     "@octokit/core": "^4.2.0",
     "@octokit/request": "^6.2.3",
+    "@remix-pwa/sw": "^0.0.3",
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
     "@remix-run/vercel": "^1.15.0",
