--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@heroicons/react": "^2.0.15",
     "@octokit/core": "^4.2.0",
     "@octokit/request": "^6.2.3",
-    "@remix-pwa/sw": "^0.3.3",
+    "@remix-pwa/sw": "^0.3.5",
     "@remix-run/node": "^1.16.1",
     "@remix-run/react": "^1.16.1",
     "@remix-run/vercel": "^1.16.1",
@@ -34,11 +34,13 @@
     "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "prism-react-renderer": "^2.0.4",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.1",
     "redent": "^4.0.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-prism": "^2.2.2",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
     "remark-emoji": "^3.1.1",
@@ -58,6 +60,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/fs-extra": "^11.0.1",
     "@types/node-persist": "^3.1.2",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "esbuild": "^0.17.19",
