--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@octokit/core": "^4.2.0",
     "@octokit/request": "^6.2.3",
     "@remix-pwa/sw": "^0.3.6",
-    "@remix-run/node": "^1.18.1",
-    "@remix-run/react": "^1.18.1",
-    "@remix-run/vercel": "^1.18.1",
+    "@remix-run/node": "1.19.1",
+    "@remix-run/react": "1.19.1",
+    "@remix-run/vercel": "1.19.1",
     "@vercel/analytics": "^1.0.1",
     "@vercel/node": "^2.14.4",
     "clsx": "^1.2.1",
@@ -54,20 +54,25 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.18.1",
-    "@remix-run/eslint-config": "^1.18.1",
-    "@remix-run/serve": "^1.18.1",
+    "@remix-run/dev": "1.19.1",
+    "@remix-run/eslint-config": "1.19.1",
+    "@remix-run/serve": "1.19.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/fs-extra": "^11.0.1",
     "@types/node-persist": "^3.1.2",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.14",
     "esbuild": "^0.17.19",
     "eslint": "^8.41.0",
+    "postcss": "^8.4.27",
     "prettier": "^2.8.4",
     "rehype-accessible-emojis": "^0.3.2",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
   },
   "engines": {
