--- a/package.json
+++ b/package.json
@@ -6,74 +6,69 @@
     "dev": "run-p dev:*",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "build:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --minify --bundle --format=esm --define:process.env.NODE_ENV='\"production\"'",
-    "build:remix": "cross-env NODE_ENV=production remix build",
-    "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch",
-    "dev:remix": "cross-env NODE_ENV=development remix dev",
+    "build:remix": "remix build",
+    "dev:remix": "remix dev",
     "generator": "node ./generate-metadata.js",
     "lint": "eslint --fix ./**/*.tsx"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.11",
-    "@heroicons/react": "^2.0.15",
-    "@octokit/core": "^4.2.0",
-    "@octokit/request": "^6.2.3",
-    "@remix-pwa/sw": "^0.3.6",
-    "@remix-run/node": "1.19.1",
-    "@remix-run/react": "1.19.1",
-    "@remix-run/vercel": "1.19.1",
-    "@vercel/analytics": "^1.0.1",
-    "@vercel/node": "^2.14.4",
-    "clsx": "^1.2.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.1.3",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@octokit/core": "^5.0.0",
+    "@octokit/request": "^8.1.1",
+    "@remix-run/node": "1.19.3",
+    "@remix-run/react": "1.19.3",
+    "@remix-run/vercel": "1.19.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vercel/analytics": "^1.0.2",
+    "@vercel/node": "^2.4.0",
+    "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "esbuild": "^0.19.2",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.2.1",
-    "node-persist": "^3.1.0",
+    "node-persist": "^3.1.3",
     "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
-    "prism-react-renderer": "^2.0.4",
+    "prism-react-renderer": "^2.0.6",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.1",
+    "react-spring": "^9.7.2",
     "redent": "^4.0.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-prism": "^2.2.2",
-    "rehype-prism-plus": "^1.5.1",
-    "rehype-slug": "^5.1.0",
-    "remark-emoji": "^3.1.1",
+    "rehype-prism-plus": "^1.6.3",
+    "rehype-slug": "^6.0.0",
+    "remark-emoji": "^4.0.0",
     "remark-gfm": "^3.0.1",
     "remix-typedjson": "^0.1.7",
-    "remix-utils": "^6.0.0",
+    "remix-utils": "^6.6.0",
     "tailwindcss-font-inter": "^3.0.1",
     "tiny-invariant": "^1.3.1",
     "usehooks-ts": "^2.9.1",
-    "web-push": "^3.4.5",
-    "zod": "^3.21.4"
+    "web-push": "^3.6.5",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.19.1",
-    "@remix-run/eslint-config": "1.19.1",
-    "@remix-run/serve": "1.19.1",
+    "@remix-run/dev": "1.19.3",
+    "@remix-run/eslint-config": "1.19.3",
+    "@remix-run/serve": "1.19.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.4",
+    "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.9",
     "@types/fs-extra": "^11.0.1",
-    "@types/node-persist": "^3.1.2",
+    "@types/node-persist": "^3.1.4",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "autoprefixer": "^10.4.14",
-    "esbuild": "^0.17.19",
-    "eslint": "^8.41.0",
-    "postcss": "^8.4.27",
-    "prettier": "^2.8.4",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.48.0",
+    "prettier": "^3.0.3",
     "rehype-accessible-emojis": "^0.3.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=14"
