--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
     "@remix-run/vercel": "1.19.3",
+    "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^1.0.2",
     "@vercel/node": "^2.4.0",
+    "acorn": "^8.10.0",
+    "acorn-jsx": "^5.3.2",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "esbuild": "^0.19.2",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
+    "json5": "^2.2.3",
+    "mdast-util-to-string": "^4.0.0",
     "mdx-bundler": "^9.2.1",
     "node-persist": "^3.1.3",
     "node-sass": "^9.0.0",
@@ -47,6 +52,8 @@
     "remix-utils": "^6.6.0",
     "tailwindcss-font-inter": "^3.0.1",
     "tiny-invariant": "^1.3.1",
+    "unist-util-filter": "^5.0.1",
+    "unist-util-visit": "^5.0.0",
     "usehooks-ts": "^2.9.1",
     "web-push": "^3.6.5",
     "zod": "^3.22.2"
