new deps. for update

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s build:*",
-    "dev": "run-p dev:*",
+    "buildt": "run-s build:*",
+    "devt": "run-p dev:*",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "build:remix": "remix build",
-    "dev:remix": "remix dev",
+    "build": "remix build",
+    "dev": "remix dev",
     "generator": "node ./generate-metadata.js",
     "lint": "eslint --fix ./**/*.tsx"
   },
@@ -22,7 +22,7 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^1.0.2",
-    "@vercel/node": "^2.4.0",
+    "@vercel/node": "^2.10.3",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "clsx": "^2.0.0",
@@ -30,6 +30,7 @@
     "esbuild": "^0.19.2",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
+    "isbot": "^3.6.13",
     "json5": "^2.2.3",
     "mdast-util-to-string": "^4.0.0",
     "mdx-bundler": "^9.2.1",
@@ -50,6 +51,7 @@
     "remark-gfm": "^3.0.1",
     "remix-typedjson": "^0.1.7",
     "remix-utils": "^6.6.0",
+    "source-map-support": "^0.5.21",
     "tailwindcss-font-inter": "^3.0.1",
     "tiny-invariant": "^1.3.1",
     "unist-util-filter": "^5.0.1",
@@ -70,6 +72,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/source-map-support": "^0.5.7",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
