--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@heroicons/react": "^2.0.18",
     "@octokit/core": "^5.0.0",
     "@octokit/request": "^8.1.1",
+    "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
     "@remix-run/vercel": "1.19.3",
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^1.0.2",
-    "@vercel/node": "^2.10.3",
+    "@vercel/node": "2.10.3",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "clsx": "^2.0.0",
