--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/redent": "^3.0.1",
     "@types/source-map-support": "^0.5.7",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
