--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "esbuild": "^0.19.2",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
+    "indent-string": "^5.0.0",
     "isbot": "^3.6.13",
     "json5": "^2.2.3",
     "mdast-util-to-string": "^4.0.0",
@@ -55,6 +56,7 @@
     "remix-typedjson": "^0.1.7",
     "remix-utils": "^6.6.0",
     "source-map-support": "^0.5.21",
+    "strip-indent": "^4.0.0",
     "tailwindcss-font-inter": "^3.0.1",
     "tiny-invariant": "^1.3.1",
     "unist-util-filter": "^5.0.1",
