github: github action stuffs

--- a/.github/workflows/generate-metadata.yml
+++ b/.github/workflows/generate-metadata.yml
@@ -13,18 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: 🛡 Use Node.js 
-      uses: actions/setup-node@v3
+    - uses: jakejarvis/s3-sync-action@master
       with:
-        node-version: 18
-
-    - name: ✅ Install dependencies 
-      run: npm install
-
-    - name: 📜 Generate metadata 
-      run: npm run generator
+        args: --acl public-read --follow-symlinks --delete
       env:
-        GITHUB_KEY: ${{ secrets.GIT_TOKEN }}
-        NODE_ENV: production
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'eu-north-1'
+        SOURCE_DIR: 'posts'
+        DEST_DIR: 'posts_v3'
       
