--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 SESSION_SECRET=TwoSecretFiveMe
 GITHUB_KEY=ghp_1234567890
 NODE_ENV=development
+AWS_SECRET_ACCESS_KEY=1234567890
+AWS_ACCESS_KEY_ID=AKIA123456789
+AWS_BUCKET_NAME=bucket-name
