--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "format": "prettier --write .",
     "build": "remix build",
     "dev": "remix dev",
+    "deploy": "fly deploy --remote-only",
+    "start": "remix-serve build",
     "generator": "node ./generate-metadata.js",
     "lint": "eslint --fix ./**/*.tsx"
   },
@@ -32,7 +34,7 @@
     "acorn-jsx": "^5.3.2",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
-    "esbuild": "^0.19.2",
+    "esbuild": "0.18.8",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
     "indent-string": "^5.0.0",
@@ -40,8 +42,6 @@
     "json5": "^2.2.3",
     "mdast-util-to-string": "^4.0.0",
     "mdx-bundler": "^9.2.1",
-    "node-persist": "^3.1.3",
-    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "prism-react-renderer": "^2.0.6",
     "prismjs": "^1.29.0",
@@ -68,6 +68,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@remix-run/dev": "1.19.3",
     "@remix-run/eslint-config": "1.19.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
