--- a/package.json
+++ b/package.json
@@ -20,16 +20,12 @@
     "@octokit/core": "^5.0.0",
     "@octokit/request": "^8.1.1",
     "@remix-run/css-bundle": "^1.19.3",
-    "@remix-run/dev": "1.19.3",
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
     "@remix-run/serve": "1.19.3",
-    "@remix-run/vercel": "1.19.3",
     "@sindresorhus/slugify": "^2.2.1",
     "@supabase/supabase-js": "^2.33.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@vercel/analytics": "^1.0.2",
-    "@vercel/node": "2.10.3",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "clsx": "^2.0.0",
@@ -68,6 +64,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.9",
+    "@remix-run/dev": "1.19.3",
     "@remix-run/eslint-config": "1.19.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
@@ -78,7 +76,6 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/redent": "^3.0.1",
-    "@types/source-map-support": "^0.5.7",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
