feat: added dynamic social image generator + meta info

--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "remark-gfm": "^3.0.1",
     "remix-typedjson": "^0.1.7",
     "remix-utils": "^6.6.0",
+    "satori": "^0.10.4",
     "source-map-support": "^0.5.21",
     "strip-indent": "^4.0.0",
+    "svg2img": "^1.0.0-beta.2",
     "tailwindcss-font-inter": "^3.0.1",
     "tiny-invariant": "^1.3.1",
     "unist-util-filter": "^5.0.1",
