--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "rehype-accessible-emojis": "^0.3.2",
+    "tailwind-heropatterns": "^0.0.8",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
