feat: more doc frats

--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "buildt": "run-s build:*",
-    "devt": "run-p dev:*",
+    "build": "run-s build:*",
+    "dev": "run-p dev:*",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "build": "remix build",
-    "dev": "remix dev",
     "deploy": "fly deploy --remote-only",
     "start": "remix-serve build",
     "generator": "node ./generate-metadata.js",
-    "lint": "eslint --fix ./**/*.tsx"
+    "lint": "eslint --fix ./**/*.tsx",
+    "build:remix": "remix build",
+    "dev:remix": "remix dev",
+    "build:worker": "remix-pwa build",
+    "dev:worker": "remix-pwa dev"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.410.0",
@@ -19,6 +21,10 @@
     "@heroicons/react": "^2.0.18",
     "@octokit/core": "^5.0.0",
     "@octokit/request": "^8.1.1",
+    "@remix-pwa/cache": "^2.0.4",
+    "@remix-pwa/strategy": "^2.1.2",
+    "@remix-pwa/sw": "^2.1.2",
+    "@remix-pwa/worker-runtime": "^2.0.2",
     "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
@@ -29,7 +35,7 @@
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "esbuild": "0.17.6",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
@@ -51,7 +57,7 @@
     "rehype-slug": "^6.0.0",
     "remark-emoji": "^4.0.0",
     "remark-gfm": "^3.0.1",
-    "remix-typedjson": "^0.1.7",
+    "remix-typedjson": "^0.2.0",
     "remix-utils": "^6.6.0",
     "satori": "^0.10.4",
     "source-map-support": "^0.5.21",
@@ -67,6 +73,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.9",
+    "@remix-pwa/dev": "2.0.12",
     "@remix-run/dev": "1.19.3",
     "@remix-run/eslint-config": "1.19.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -80,6 +87,7 @@
     "@types/redent": "^3.0.1",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "rehype-accessible-emojis": "^0.3.2",
     "tailwind-heropatterns": "^0.0.8",
