--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "typecheck": "tsc",
     "format": "prettier --write .",
     "build:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --minify --bundle --format=esm --define:process.env.NODE_ENV='\"production\"'",
-    "build:remix": "cross-env NODE_ENV=production remix build",
+    "build:remix": "remix build",
     "dev:worker": "esbuild ./app/entry.worker.ts --outfile=./public/entry.worker.js --bundle --format=esm --define:process.env.NODE_ENV='\"development\"' --watch",
-    "dev:remix": "cross-env NODE_ENV=development remix dev",
+    "dev:remix": "remix dev",
     "generator": "node ./generate-metadata.js",
     "lint": "eslint --fix ./**/*.tsx"
   },
@@ -19,7 +19,7 @@
     "@heroicons/react": "^2.0.15",
     "@octokit/core": "^4.2.0",
     "@octokit/request": "^6.2.3",
-    "@remix-pwa/sw": "^0.3.6",
+    "@remix-pwa/sw": "1.0.0",
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
     "@remix-run/vercel": "1.19.3",
