--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@heroicons/react": "^2.0.18",
     "@octokit/core": "^5.0.0",
     "@octokit/request": "^8.1.1",
-    "@remix-pwa/cache": "^2.0.4",
-    "@remix-pwa/strategy": "^2.1.2",
-    "@remix-pwa/sw": "^2.1.2",
-    "@remix-pwa/worker-runtime": "^2.0.2",
+    "@remix-pwa/cache": "^2.0.5",
+    "@remix-pwa/strategy": "^2.1.3",
+    "@remix-pwa/sw": "^2.1.4",
+    "@remix-pwa/worker-runtime": "^2.0.3",
     "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
@@ -73,7 +73,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.9",
-    "@remix-pwa/dev": "2.0.12",
+    "@remix-pwa/dev": "2.0.15",
     "@remix-run/dev": "1.19.3",
     "@remix-run/eslint-config": "1.19.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -87,9 +87,11 @@
     "@types/redent": "^3.0.1",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
+    "glob": "^10.3.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "rehype-accessible-emojis": "^0.3.2",
+    "remix-pwa": "^3.0.5",
     "tailwind-heropatterns": "^0.0.8",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
