chore: site tweaks & fixes

--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@heroicons/react": "^2.0.18",
     "@octokit/core": "^5.0.0",
     "@octokit/request": "^8.1.1",
-    "@remix-pwa/cache": "^2.0.5",
-    "@remix-pwa/strategy": "^2.1.3",
+    "@remix-pwa/cache": "^2.0.7",
+    "@remix-pwa/client": "^2.0.1",
+    "@remix-pwa/strategy": "^2.1.4",
     "@remix-pwa/sw": "^2.1.4",
     "@remix-pwa/worker-runtime": "^2.0.3",
     "@remix-run/css-bundle": "^1.19.3",
