--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@remix-run/react": "1.19.3",
     "@remix-run/serve": "1.19.3",
     "@sindresorhus/slugify": "^2.2.1",
-    "@supabase/supabase-js": "^2.33.2",
     "@tailwindcss/typography": "^0.5.9",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
@@ -74,7 +73,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.9",
-    "@remix-pwa/dev": "2.0.15",
+    "@remix-pwa/dev": "^2.0.31",
     "@remix-run/dev": "1.19.3",
     "@remix-run/eslint-config": "1.19.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -92,7 +91,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "rehype-accessible-emojis": "^0.3.2",
-    "remix-pwa": "^3.0.5",
+    "remix-pwa": "^3.0.19",
     "tailwind-heropatterns": "^0.0.8",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
