added Google Analytics

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ NODE_ENV=development
 AWS_SECRET_ACCESS_KEY=1234567890
 AWS_ACCESS_KEY_ID=AKIA123456789
 AWS_BUCKET_NAME=bucket-name
+GOOGLE_ANALYTICS_ID=UA-123456789-1
