chore: upgraded to Remix v2

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@remix-pwa/sw": "^2.1.4",
     "@remix-pwa/worker-runtime": "^2.0.3",
     "@remix-run/css-bundle": "^1.19.3",
-    "@remix-run/node": "1.19.3",
-    "@remix-run/react": "1.19.3",
-    "@remix-run/serve": "1.19.3",
+    "@remix-run/node": "2.0.0",
+    "@remix-run/react": "2.0.0",
+    "@remix-run/serve": "2.0.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/typography": "^0.5.9",
     "acorn": "^8.10.0",
@@ -49,6 +49,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-spring": "^9.7.2",
     "redent": "^4.0.0",
     "rehype-autolink-headings": "^6.1.1",
@@ -57,8 +58,7 @@
     "rehype-slug": "^6.0.0",
     "remark-emoji": "^4.0.0",
     "remark-gfm": "^3.0.1",
-    "remix-typedjson": "^0.2.0",
-    "remix-utils": "^6.6.0",
+    "remix-utils": "^7.4.0",
     "satori": "^0.10.4",
     "source-map-support": "^0.5.21",
     "strip-indent": "^4.0.0",
@@ -74,7 +74,7 @@
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.9",
     "@remix-pwa/dev": "^2.0.31",
-    "@remix-run/dev": "1.19.3",
+    "@remix-run/dev": "2.0.0",
     "@remix-run/eslint-config": "1.19.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
