--- a/.github/workflows/sync-dev-doc.yml
+++ b/.github/workflows/sync-dev-doc.yml
@@ -1,4 +1,4 @@
-name: Generate metadata
+name: Generate dev metadata
 
 on:
   push:
@@ -23,3 +23,4 @@ jobs:
         AWS_REGION: 'eu-north-1'
         SOURCE_DIR: 'posts_dev'
         DEST_DIR: 'posts_v3_dev'
+
