--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "typecheck": "tsc",
     "format": "prettier --write .",
     "deploy": "fly deploy --remote-only",
-    "start": "remix-serve build",
+    "start": "remix-serve build/index.js",
     "generator": "node ./generate-metadata.js",
     "lint": "eslint --fix ./**/*.tsx",
     "build:remix": "remix build",
-    "dev:remix": "remix dev",
+    "dev:remix": "remix dev --manual",
     "build:worker": "remix-pwa build",
     "dev:worker": "remix-pwa dev"
   },
@@ -35,7 +35,7 @@
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "clsx": "^2.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.2",
     "esbuild": "0.17.6",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
