--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "run-p dev:*",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "deploy": "fly deploy --remote-only",
+    "deploy": "flyctl deploy --remote-only",
     "start": "remix-serve build/index.js",
     "generator": "node ./generate-metadata.js",
     "lint": "eslint --fix ./**/*.tsx",
@@ -59,10 +59,8 @@
     "remark-emoji": "^4.0.0",
     "remark-gfm": "^3.0.1",
     "remix-utils": "^7.4.0",
-    "satori": "^0.10.4",
     "source-map-support": "^0.5.21",
     "strip-indent": "^4.0.0",
-    "svg2img": "^1.0.0-beta.2",
     "tailwindcss-font-inter": "^3.0.1",
     "tiny-invariant": "^1.3.1",
     "unist-util-filter": "^5.0.1",
