--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-SESSION_SECRET=TwoSecretFiveMe
-NODE_ENV=development
-AWS_SECRET_ACCESS_KEY=1234567890
-AWS_ACCESS_KEY_ID=AKIA123456789
-AWS_BUCKET_NAME=bucket-name
-GOOGLE_ANALYTICS_ID=UA-123456789-1
+AWS_S3_BUCKET="your-bucket-name"
+AWS_ACCESS_KEY_ID="ASOmetH1nG"
+AWS_SECRET_ACCESS_KEY="some-secret-key"
+GITHUB_TOKEN="ghp_your-github-token"
+GITHUB_OWNER="your-username"
+GITHUB_REPO="your-repo"
