--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,3 @@
-# fly.toml app configuration file generated for remix-pwa-docs on 2023-09-12T23:04:19+01:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = "remix-pwa-docs"
 primary_region = "cdg"
 
@@ -27,3 +22,8 @@ primary_region = "cdg"
     path = "/healthcheck"
     protocol = "http"
     tls_skip_verify = false
+
+# [[vm]]
+#   cpu_kind = "shared"
+#   cpus = 1
+#   memory_mb = 1024
