new package.json info

--- a/package.json
+++ b/package.json
@@ -1,100 +1,107 @@
 {
+  "name": "journal-stack",
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "build": "run-s build:*",
-    "dev": "run-p dev:*",
-    "typecheck": "tsc",
-    "format": "prettier --write .",
-    "deploy": "flyctl deploy --remote-only",
-    "start": "remix-serve build/index.js",
-    "generator": "node ./generate-metadata.js",
-    "lint": "eslint --fix ./**/*.tsx",
-    "build:remix": "remix build",
-    "dev:remix": "remix dev --manual",
-    "build:worker": "remix-pwa build",
-    "dev:worker": "remix-pwa dev"
+    "build": "remix vite:build",
+    "clean": "rimraf build",
+    "dev": "remix vite:dev",
+    "generate:metadata": "tsx scripts/generate-metadata.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "nuke": "echo \"☢️ Running nuke command...\n\";npm run clean && rimraf node_modules package-lock.json && npm i",
+    "postclone": "npm run nuke",
+    "pretest:e2e:run": "npm run build",
+    "start": "remix-serve ./build/server/index.js",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:e2e": "npm run test:e2e:dev --silent",
+    "test:e2e:dev": "playwright test --ui",
+    "test:e2e:install": "npx playwright install --with-deps chromium",
+    "test:e2e:run": "cross-env CI=true playwright test",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.410.0",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@octokit/core": "^5.0.0",
-    "@octokit/request": "^8.1.1",
-    "@remix-pwa/cache": "^2.0.7",
-    "@remix-pwa/client": "^2.0.1",
-    "@remix-pwa/strategy": "^2.1.4",
-    "@remix-pwa/sw": "^2.1.4",
-    "@remix-pwa/worker-runtime": "^2.0.3",
-    "@remix-run/css-bundle": "^1.19.3",
-    "@remix-run/node": "2.0.0",
-    "@remix-run/react": "2.0.0",
-    "@remix-run/serve": "2.0.0",
+    "@aws-sdk/client-s3": "^3.535.0",
+    "@epic-web/client-hints": "^1.3.0",
+    "@epic-web/invariant": "^1.0.0",
+    "@headlessui/react": "^1.7.18",
+    "@octokit/request": "^9.0.1",
+    "@remix-pwa/sw": "^2.2.0-dev.4",
+    "@remix-pwa/worker-runtime": "^2.1.0-dev.1",
+    "@remix-run/node": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
+    "@remix-run/serve": "^2.8.1",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tailwindcss/typography": "^0.5.9",
-    "acorn": "^8.10.0",
-    "acorn-jsx": "^5.3.2",
-    "clsx": "^2.0.0",
-    "dotenv": "^16.3.2",
-    "esbuild": "0.17.6",
-    "fs-extra": "^11.1.1",
-    "gray-matter": "^4.0.3",
-    "indent-string": "^5.0.0",
-    "isbot": "^3.6.13",
-    "json5": "^2.2.3",
-    "mdast-util-to-string": "^4.0.0",
-    "mdx-bundler": "^9.2.1",
-    "npm-run-all": "^4.1.5",
-    "prism-react-renderer": "^2.0.6",
+    "acorn": "^8.11.3",
+    "clsx": "^2.1.0",
+    "cookie": "^0.6.0",
+    "dotenv": "^16.4.5",
+    "isbot": "^5.1.1",
+    "lucide-react": "^0.358.0",
+    "mdx-bundler": "^10.0.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
-    "react-spring": "^9.7.2",
+    "react-spring": "^9.7.3",
     "redent": "^4.0.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-prism": "^2.2.2",
-    "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
-    "remark-emoji": "^4.0.0",
-    "remark-gfm": "^3.0.1",
-    "remix-utils": "^7.4.0",
-    "source-map-support": "^0.5.21",
-    "strip-indent": "^4.0.0",
-    "tailwindcss-font-inter": "^3.0.1",
-    "tiny-invariant": "^1.3.1",
+    "remark-emoji": "^4.0.1",
+    "remark-gfm": "^4.0.0",
+    "remix-client-cache": "^1.0.1",
+    "remix-utils": "^7.5.0",
     "unist-util-filter": "^5.0.1",
-    "unist-util-visit": "^5.0.0",
-    "usehooks-ts": "^2.9.1",
-    "web-push": "^3.6.5",
-    "zod": "^3.22.2"
+    "valtio": "^1.13.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.4.9",
-    "@remix-pwa/dev": "^2.0.31",
-    "@remix-run/dev": "2.0.0",
-    "@remix-run/eslint-config": "1.19.3",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.6",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node-persist": "^3.1.4",
-    "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@types/redent": "^3.0.1",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.48.0",
-    "glob": "^10.3.4",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3",
-    "rehype-accessible-emojis": "^0.3.2",
-    "remix-pwa": "^3.0.19",
-    "tailwind-heropatterns": "^0.0.8",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "@flydotio/dockerfile": "^0.5.3",
+    "@playwright/test": "^1.42.1",
+    "@remix-pwa/dev": "^2.1.0-dev.7",
+    "@remix-run/dev": "^2.8.1",
+    "@remix-run/eslint-config": "^2.8.1",
+    "@tailwindcss/typography": "0.5.9",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/prismjs": "^1.26.3",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.2.1",
+    "all-contributors-cli": "^6.26.1",
+    "autoprefixer": "^10.4.18",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-disable": "^2.0.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "gray-matter": "^4.0.3",
+    "jsdom": "^24.0.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.10",
+    "remix-development-tools": "^4.0.8",
+    "rimraf": "^5.0.5",
+    "tailwindcss": "^3.4.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^1.2.1"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18.0.0"
   }
 }
