--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 AWS_S3_BUCKET="your-bucket-name"
 AWS_ACCESS_KEY_ID="ASOmetH1nG"
 AWS_SECRET_ACCESS_KEY="some-secret-key"
+ALGOLIA_APP_ID="your-algolia-app-id"
+ALGOLIA_API_KEY="your-algolia-api-key"
 GITHUB_TOKEN="ghp_your-github-token"
 GITHUB_OWNER="your-username"
 GITHUB_REPO="your-repo"
