--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "generate:metadata": "tsx scripts/generate-metadata.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "nuke": "echo \"☢️ Running nuke command...\n\";npm run clean && rimraf node_modules package-lock.json && npm i",
+    "nuke": "echo \"☢️ Running nuke command...\n\";npm run clean && rimraf node_modules package-lock.json && npm i && patch-package",
     "postclone": "npm run nuke",
+    "postinstall": "patch-package",
     "pretest:e2e:run": "npm run build",
     "start": "remix-serve ./build/server/index.js",
     "test": "vitest",
@@ -24,23 +25,26 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.535.0",
-    "@epic-web/client-hints": "^1.3.0",
+    "@aws-sdk/client-s3": "^3.582.0",
+    "@docsearch/react": "^3.6.0",
+    "@epic-web/client-hints": "^1.3.2",
     "@epic-web/invariant": "^1.0.0",
-    "@headlessui/react": "^1.7.18",
-    "@octokit/request": "^9.0.1",
-    "@remix-pwa/sw": "^2.2.0-dev.4",
-    "@remix-pwa/worker-runtime": "^2.1.0-dev.1",
-    "@remix-run/node": "^2.8.1",
-    "@remix-run/react": "^2.8.1",
-    "@remix-run/serve": "^2.8.1",
+    "@headlessui/react": "^2.0.3",
+    "@octokit/request": "^9.1.1",
+    "@remix-pwa/sw": "^3.0.7",
+    "@remix-pwa/worker-runtime": "^2.1.2",
+    "@remix-run/node": "^2.9.2",
+    "@remix-run/react": "^2.9.2",
+    "@remix-run/serve": "^2.9.2",
     "@sindresorhus/slugify": "^2.2.1",
     "acorn": "^8.11.3",
-    "clsx": "^2.1.0",
+    "algoliasearch": "^4.23.3",
+    "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
-    "isbot": "^5.1.1",
-    "lucide-react": "^0.358.0",
+    "isbot": "^5.1.6",
+    "kbar": "^0.1.0-beta.45",
+    "lucide-react": "^0.379.0",
     "mdx-bundler": "^10.0.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -52,6 +56,7 @@
     "remark-gfm": "^4.0.0",
     "remix-client-cache": "^1.0.1",
     "remix-utils": "^7.5.0",
+    "spin-delay": "^2.0.0",
     "unist-util-filter": "^5.0.1",
     "valtio": "^1.13.2",
     "zod": "^3.22.4"
@@ -59,7 +64,7 @@
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.3",
     "@playwright/test": "^1.42.1",
-    "@remix-pwa/dev": "^2.1.0-dev.7",
+    "@remix-pwa/dev": "^3.0.5",
     "@remix-run/dev": "^2.8.1",
     "@remix-run/eslint-config": "^2.8.1",
     "@tailwindcss/typography": "0.5.9",
