--- a/package.json
+++ b/package.json
@@ -25,58 +25,54 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.582.0",
-    "@docsearch/react": "^3.6.0",
+    "@aws-sdk/client-s3": "^3.616.0",
+    "@docsearch/react": "^3.6.1",
     "@epic-web/client-hints": "^1.3.2",
     "@epic-web/invariant": "^1.0.0",
-    "@headlessui/react": "^2.0.3",
-    "@octokit/request": "^9.1.1",
+    "@headlessui/react": "^2.1.2",
+    "@octokit/request": "^9.1.3",
     "@remix-pwa/sw": "^3.0.7",
     "@remix-pwa/worker-runtime": "^2.1.2",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
+    "@remix-run/node": "^2.10.3",
+    "@remix-run/react": "^2.10.3",
+    "@remix-run/serve": "^2.10.3",
     "@sindresorhus/slugify": "^2.2.1",
-    "acorn": "^8.11.3",
+    "acorn": "^8.12.1",
     "algoliasearch": "^4.23.3",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
-    "isbot": "^5.1.6",
-    "kbar": "^0.1.0-beta.45",
-    "lucide-react": "^0.379.0",
-    "mdx-bundler": "^10.0.1",
+    "isbot": "^5.1.13",
+    "lucide-react": "^0.412.0",
+    "mdx-bundler": "^10.0.2",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-spring": "^9.7.3",
     "redent": "^4.0.0",
     "rehype-slug": "^6.0.0",
-    "remark-emoji": "^4.0.1",
+    "remark-emoji": "^5.0.1",
     "remark-gfm": "^4.0.0",
     "remix-client-cache": "^1.0.1",
-    "remix-utils": "^7.5.0",
+    "remix-utils": "^7.6.0",
     "spin-delay": "^2.0.0",
     "unist-util-filter": "^5.0.1",
     "valtio": "^1.13.2",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.3",
-    "@playwright/test": "^1.42.1",
-    "@remix-pwa/dev": "^3.0.5",
-    "@remix-run/dev": "^2.8.1",
-    "@remix-run/eslint-config": "^2.8.1",
-    "@tailwindcss/typography": "0.5.9",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@flydotio/dockerfile": "^0.5.8",
+    "@playwright/test": "^1.45.2",
+    "@remix-pwa/dev": "^3.0.6",
+    "@remix-run/dev": "^2.10.3",
+    "@remix-run/eslint-config": "^2.10.3",
+    "@tailwindcss/typography": "0.5.13",
     "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^1.2.1",
     "all-contributors-cli": "^6.26.1",
     "autoprefixer": "^10.4.18",
@@ -90,20 +86,21 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "gray-matter": "^4.0.3",
     "jsdom": "^24.0.0",
+    "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.10",
-    "remix-development-tools": "^4.0.8",
-    "rimraf": "^5.0.5",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "remix-development-tools": "^4.2.2",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
+    "tsx": "^4.16.0",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.4",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^1.2.1"
   },
