🚮 removed `eslint` + `prettier` - hello biome!

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
+    "apply": "npx @biomejs/biome check --apply .",
     "build": "remix vite:build",
     "clean": "rimraf build",
     "deploy": "fly deploy --remote-only",
     "dev": "remix vite:dev",
     "generate:metadata": "tsx scripts/generate-metadata.ts",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "format": "npx @biomejs/biome format .",
+    "format:write": "npx @biomejs/biome format --write .",
+    "lint": "npx @biomejs/biome lint .",
+    "lint:fix": "npx @biomejs/biome lint --apply .",
     "nuke": "echo \"☢️ Running nuke command...\n\";npm run clean && rimraf node_modules package-lock.json && npm i && patch-package",
     "postclone": "npm run nuke",
     "postinstall": "patch-package",
@@ -38,7 +41,7 @@
     "@remix-run/serve": "^2.10.3",
     "@sindresorhus/slugify": "^2.2.1",
     "acorn": "^8.12.1",
-    "algoliasearch": "^4.23.3",
+    "algoliasearch": "^4.24.0",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
@@ -67,42 +70,26 @@
     "@remix-run/dev": "^2.10.3",
     "@remix-run/eslint-config": "^2.10.3",
     "@tailwindcss/typography": "0.5.13",
-    "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.3.0",
+    "@types/prismjs": "^1.26.4",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@vitest/coverage-v8": "^2.0.3",
     "all-contributors-cli": "^6.26.1",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-disable": "^2.0.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "gray-matter": "^4.0.3",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.0",
     "patch-package": "^8.0.0",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier": "^3.3.3",
     "remix-development-tools": "^4.2.2",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.0",
-    "tsx": "^4.16.0",
+    "tailwindcss": "^3.4.6",
+    "tsx": "^4.16.2",
     "typescript": "^5.5.3",
     "vite": "^5.3.4",
-    "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^1.2.1"
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^2.0.3"
   },
   "engines": {
     "node": ">=18.0.0"
