--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format:write": "npx @biomejs/biome format --write .",
     "lint": "npx @biomejs/biome lint .",
     "lint:fix": "npx @biomejs/biome lint --write .",
-    "nuke": "echo \"☢️ Running nuke command...\n\";npm run clean && rimraf node_modules package-lock.json && npm i && patch-package",
+    "nuke": "echo \"☢️ Running nuke command...\n\";npm run clean && rimraf node_modules package-lock.json && npm install && patch-package",
     "postclone": "npm run nuke",
     "postinstall": "patch-package",
     "pretest:e2e:run": "npm run build",
@@ -32,22 +32,22 @@
     "@docsearch/react": "^3.6.1",
     "@epic-web/client-hints": "^1.3.2",
     "@epic-web/invariant": "^1.0.0",
-    "@headlessui/react": "^2.1.2",
+    "@headlessui/react": "^2.1.8",
     "@octokit/request": "^9.1.3",
-    "@remix-pwa/sw": "^3.0.7",
-    "@remix-pwa/worker-runtime": "^2.1.2",
-    "@remix-run/node": "^2.10.3",
-    "@remix-run/react": "^2.10.3",
-    "@remix-run/serve": "^2.10.3",
+    "@remix-pwa/sw": "^3.0.9",
+    "@remix-pwa/worker-runtime": "^2.1.4",
+    "@remix-run/node": "2.12.0",
+    "@remix-run/react": "2.12.0",
+    "@remix-run/serve": "2.12.0",
     "@sindresorhus/slugify": "^2.2.1",
     "acorn": "^8.12.1",
-    "algoliasearch": "^4.24.0",
+    "algoliasearch": "^5.5.1",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
     "isbot": "^5.1.13",
     "lucide-react": "^0.412.0",
-    "mdx-bundler": "^10.0.2",
+    "mdx-bundler": "^10.0.3",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -56,7 +56,7 @@
     "rehype-slug": "^6.0.0",
     "remark-emoji": "^5.0.1",
     "remark-gfm": "^4.0.0",
-    "remix-client-cache": "^1.0.1",
+    "remix-client-cache": "^1.1.0",
     "remix-utils": "^7.6.0",
     "spin-delay": "^2.0.0",
     "unist-util-filter": "^5.0.1",
@@ -67,8 +67,7 @@
     "@flydotio/dockerfile": "^0.5.8",
     "@playwright/test": "^1.45.2",
     "@remix-pwa/dev": "^3.0.6",
-    "@remix-run/dev": "^2.10.3",
-    "@remix-run/eslint-config": "^2.10.3",
+    "@remix-run/dev": "2.12.0",
     "@tailwindcss/typography": "0.5.13",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
