--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postclone": "npm run nuke",
     "postinstall": "patch-package",
     "pretest:e2e:run": "npm run build",
+    "preview": "remix vite:preview",
     "start": "remix-serve ./build/server/index.js",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
@@ -29,12 +30,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.616.0",
-    "@docsearch/react": "^3.6.1",
+    "@docsearch/react": "^3.6.2",
     "@epic-web/client-hints": "^1.3.2",
     "@epic-web/invariant": "^1.0.0",
     "@headlessui/react": "^2.1.8",
     "@octokit/request": "^9.1.3",
-    "@remix-pwa/sw": "^3.0.9",
+    "@remix-pwa/sw": "^3.0.10",
     "@remix-pwa/worker-runtime": "^2.1.4",
     "@remix-run/node": "2.12.0",
     "@remix-run/react": "2.12.0",
@@ -66,7 +67,7 @@
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.8",
     "@playwright/test": "^1.45.2",
-    "@remix-pwa/dev": "^3.0.6",
+    "@remix-pwa/dev": "^3.1.0",
     "@remix-run/dev": "2.12.0",
     "@tailwindcss/typography": "0.5.13",
     "@types/prismjs": "^1.26.4",
