--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "isbot": "^5.1.13",
     "lucide-react": "^0.412.0",
     "mdx-bundler": "^10.0.3",
+    "motion": "^12.4.7",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -60,6 +61,7 @@
     "remix-client-cache": "^1.1.0",
     "remix-utils": "^7.6.0",
     "spin-delay": "^2.0.0",
+    "tailwind-merge": "^3.0.2",
     "unist-util-filter": "^5.0.1",
     "valtio": "^1.13.2",
     "zod": "^3.23.8"
